--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,11 +20,32 @@ html { scroll-behavior: smooth; }
 
 @layer base { body { @apply bg-primary text-white; } } 
 
-.arrow-right::after {
-  content: url('/arrow-right.svg');
-  display: inline-block;
-  margin-left: 16px;
-  width: 16px;
-  height: 16px;
-  flex-shrink: 0;
+@layer utilities {
+  .bg-ghost {
+    background: linear-gradient(to bottom, #1B808B, #239BA7);
+    margin-top: 120px;
+    margin-left: 60px;
+    padding: 40px;
+    border-radius: 50px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgba(233,233,233, 0.15)
+  }
+
+  .arrow-right::after {
+    content: url('/arrow-right.svg');
+    display: inline-block;
+    margin-left: 16px;
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+  }
+
+  @media (max-width: 767px) {
+    .bg-ghost {
+      margin-top: 40px;
+      margin-left: 40px;
+    }
+  }
 }
+
